--- a/views/case.jade
+++ b/views/case.jade
@@ -1,3 +1,6 @@
 body
   -each radio in radios
-    .stack(style='background-image: url("/images/#{radio}.jpg")')
+    .stack(style='background-image: url("/images/#{radio.url}.jpg"); top: #{radio.y}; left: #{radio.x}')
+  -each text in texts
+    .md(style='top: #{text.y}; left: #{text.x}')
+      =text.content
