--- a/views/case-edit.jade
+++ b/views/case-edit.jade
@@ -1,9 +1,38 @@
 body
-  -each radio in radios
-    .stack(style='background-image: url("/images/#{radio.url}.jpg"); top: #{radio.y}; left: #{radio.x}; class="draggable")
-  -each text in texts
-    .md(style='top: #{text.y}; left: #{text.x}')
-      =text.content
+  #leftcolumn
+    -each radio in radios
+      .stack(style='background-image: url("/images/#{radio.url}.jpg"); top: #{radio.y}; left: #{radio.x}')
+    form(id ='uploadform')
+      input(type='file', name='userfile', id='userfile', multiple='multiple')
+      input(id='upload', type='submit', value='Upload file')
+  #rightcolumn
+    -each text in texts
+      .md(style='top: #{text.y}; left: #{text.x}')
+        =text.content
+  #iframe(style='width: 0px; height: 0px; visibility:none')
   script(type='text/javascript')
-    :plain
-      $(.stack).draggable({snap: true});
+    $(function(){
+      $("#upload").click(function(){
+        var d = new Date();
+        var t = d.getTime().toString();
+        var userFile = $('#userfile').val();
+        var iframe = $( '<iframe name="postframe" id="postframe" class="hidden" src="about:none" />');
+        $('#iframe').append(iframe);
+        $('#uploadform').attr("action", "/image/" + t);
+        $('#uploadform').attr("method", "post");
+        $('#uploadform').attr("userfile", userFile);
+        $('#uploadform').attr("enctype", "multipart/form-data");
+        $('#uploadform').attr("encoding", "multipart/form-data");
+        $('#uploadform').attr("target", "postframe");
+        $('#uploadform').submit();
+        // create the new div, when image processed, set it as background
+        $('#leftcolumn').append("<div class='stack' id='" + t + "'></div>");
+        $('#postframe').load(
+            function(){
+         //             iframeContents = $("iframe")[0].contentDocument.body.innerHTML;
+         //             if (iframeContents === "OK, image done"){
+             $("#" + t).css('background-image: url("/images/' + t + '")');
+         //             }
+            });
+      });
+    });
