--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,3 +1,18 @@
+#wrap {
+  width: 1024px;
+}
+#controls {
+  width: 100%;
+  height: 30px;
+}
+#leftcolumn {
+  width: 512px;
+  float: left;
+}
+#righcolumn {
+  width: 480px;
+  float: right;
+}
 .stack {
   width: 512px;
   height: 512px;
@@ -15,6 +30,11 @@
   width: 0px;
   height: 0px;
   visibility: none;
+  padding: 30px;
+}
+.md {
+  width: 480px;
+  float: right;
 }
 body {
   margin: 0 auto;
