--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -1,3 +1,14 @@
+#wrap
+  width 1024px
+#controls
+  width 100%
+  height 30px
+#leftcolumn
+  width 512px
+  float left
+#righcolumn
+  width 480px
+  float right
 .stack
   width 512px
   height 512px
@@ -13,6 +24,10 @@
   width 0px
   height 0px
   visibility none
+  padding 30px
+.md
+  width 480px
+  float right
 body
     margin 0 auto
     font-family Georgia, Palatino, serif
