--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,5 +1,8 @@
 #wrap {
   width: 1024px;
+  min-height: 100%;
+  overflow: auto;
+  padding-bottom: 30px;
 }
 #controls {
   width: 100%;
@@ -12,6 +15,16 @@
 #righcolumn {
   width: 480px;
   float: right;
+}
+#editbar {
+  position: fixed;
+  bottom: 0px;
+  left: 0px;
+  margin-top: -30px;
+  height: 30px;
+  width: 100%;
+  clear: both;
+  background-color: #222;
 }
 .stack {
   width: 512px;
@@ -29,12 +42,15 @@
 .hidden {
   width: 0px;
   height: 0px;
-  visibility: none;
+  display: none;
   padding: 30px;
 }
 .md {
   width: 480px;
   float: right;
+}
+html {
+  height: 100%;
 }
 body {
   margin: 0 auto;
@@ -43,6 +59,7 @@ body {
   line-height: 1;
   max-width: 960px;
   padding: 30px;
+  height: 100%;
 }
 h1,
 h2,
