--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -1,33 +1,47 @@
 #wrap
-  width 1024px
+    width 1024px
+    min-height 100%
+    overflow auto
+    padding-bottom 30px
 #controls
-  width 100%
-  height 30px
+    width 100%
+    height 30px
 #leftcolumn
-  width 512px
-  float left
+    width 512px
+    float left
 #righcolumn
-  width 480px
-  float right
+    width 480px
+    float right
+#editbar
+    position fixed
+    bottom 0px
+    left 0px
+    margin-top -30px
+    height 30px
+    width 100%
+    clear both
+    background-color #222
 .stack
-  width 512px
-  height 512px
-  padding 0
-  border 0
-  background-size auto 100%
-  overflow hidden
-  min-height 512px
+    width 512px
+    height 512px
+    padding 0
+    border 0
+    background-size auto 100%
+    overflow hidden
+    min-height 512px
 .maximized
-  top 0px
-  left 0px 
+    top 0px
+    left 0px 
 .hidden
-  width 0px
-  height 0px
-  visibility none
-  padding 30px
+    width 0px
+    height 0px
+    display none
+    padding 30px
 .md
-  width 480px
-  float right
+    width 480px
+    float right
+html
+    height 100%
 body
     margin 0 auto
     font-family Georgia, Palatino, serif
@@ -35,6 +49,7 @@ body
     line-height 1
     max-width 960px
     padding 30px
+    height 100%
 h1, h2, h3, h4 
     color #111111
     font-weight 400
