--- a/views/edit.jade
+++ b/views/edit.jade
@@ -1,136 +1,86 @@
-body
-  #wrap
-    #page.hidden
-      #{page}
-    #caseid.hidden
-      #{caseid}
-    #controls
-      form(id ='savepage')
-        input(id='save', type='submit', value='Save page')
-      form(id ='uploadform')
-        input(type='file', name='userfile', id='userfile', multiple='multiple')
-        input(id='upload', type='submit', value='Upload file')
-    #leftcolumn
-      -each radio in radios
-        .stack(url='#{radio}', style='background-image: url("/images/#{radio}.jpg")')
-    #rightcolumn
-      -each text in texts
-        .txt
-          textarea.mdtxt(style='display:none')
-            #{text}
-          .md
-    #iframe(style='width: 0px; height: 0px; display:none')
+#controls
+  form(id ='savepage', style='position:absolute; :top: 5px; right: 5px')
+    input(id='save', type='submit', value='Save page')
+    input(id='done', type='submit', value='Done')
+  form(id ='uploadform', style='position: absolute; top: 5px; left: 5px')
+    input(type='file', name='userfile', id='userfile', multiple='multiple')
+    input(id='upload', type='submit', value='Upload file')
+#iframe(style='width: 0px; height: 0px; display:none')
 
-    script(type='text/javascript')
-      $(function(){
-        var pathname = window.location.pathname;
-        //function sz(t) {
-        //  var a = t.value.split("\\n");
-        //  var b=1;
-        //  for (x=0;x < a.length; x++) { if (a[x].length >= t.cols) b+= Math.floor(a[x].length/t.cols);
-        //  }
-        //  b+= a.length;
-        //  if (b > t.rows) t.rows = b;
-        //}
-        
-        var converter = new Showdown.converter();
-        
-        function rendermd(){ 
-            $(".txt>.md").html(function(){
-            var markdown = $(this).siblings(".mdtxt").val();
-            // alert(markdown);
-            var html = converter.makeHtml(markdown);
-            return html;
-            });
-          }
-        rendermd(); // renders the markdown textareas.
+script(type='text/javascript')
 
-        $(".md").live({
-          dblclick: function() {
-            $(this).hide();
-            $(this).siblings(".mdtxt").show().focus();
-          }
-          }); // shows the textbox for editing upon doubleclick
-        
-        $(".mdtxt").live({
-        //  onkeyup: sz(this),
-          blur: function() {
-            $(this).hide();
-            rendermd();
-            $(this).siblings(".md").show();
-          }
-        }); // hides the textbox and renders the markdown
+  $(function(){
+    var pathname = window.location.pathname;
+    $(".md").live({
+      dblclick: function() {
+        $(this).hide();
+        $(this).siblings(".mdtxt").show().focus();
+      }
+      }); // shows the textbox for editing upon doubleclick
+    
+    $(".mdtxt").live({
+      blur: function() {
+        $(this).hide();
+        rendermd();
+        $(this).siblings(".md").show();
+      }
+    }); // hides the textbox and renders the markdown
 
-        $("#save").click(function(event){
-          event.preventDefault();
-          var caseidVal = $('#caseid[value]').val();
-          var pageVal = $('#page[value]').val();
-          //alert(caseidVal);
-          //alert(pageVal);
-          $.post("/case/", {
-            "caseid" : caseidVal,
-            "page" : pageVal
-            });
+    $("#save").click(function(event){
+      event.preventDefault();
+      $.ajax({
+        method: "PUT",
+        url: "/case/#{caseid}/#{page}", // caseid and page are interpolated 
+        "caseid" : caseidVal,
+        "page" : pageVal
         });
 
-        $("#save2").click(function(event) {
-          var caseid = $('#caseid[value]').val();
-          // alert(caseid);
-          var values = $("#savepage :input[value]").serialize();
-          alert(values);
-          var stacks = [];
-          stacks += $(".stack").map(function(){
-              return($(this).attr("url"));
-          }).get();
-          $("#radios").val(stacks);
-          // alert($("#radios").val());
+      var txt = [];
+      txt += $(".mdtxt").map(function(){
+          return($(this).val());
+        }).get();
+      $("#texts").val(txt);
+      //          alert(txt);  
+      var iframe = $( '<iframe name="postframe" id="postframe" class="hidden" src="about:none" />');
+      $('#iframe').append(iframe);
 
-          var txt = [];
-          txt += $(".mdtxt").map(function(){
-              return($(this).val());
-            }).get();
-          $("#texts").val(txt);
-          //          alert(txt);  
-          var iframe = $( '<iframe name="postframe" id="postframe" class="hidden" src="about:none" />');
-          $('#iframe').append(iframe);
-
-          
-          $('#savepage').attr({
-            action: "/case/",
-            method: "post",
-            caseid: caseid,
-            page: "1",
-            target: "postframe"
-          });
-
-          $('#savepage').submit();
-        });
-
-        //$('form').submit(function() {
-        //  alert($(this).serialize());
-        //});
-
-        $("#upload").click(function(){
-          var userFile = $('#userfile').val();
-          var iframe = $( '<iframe name="postframe" id="postframe" class="hidden" src="about:none" />');
-          $('#iframe').append(iframe);
-
-          $('#uploadform').attr({
-            action: "/image/",
-            method: "post",
-            userfile: userFile,
-            enctype: "multipart/form-data",
-            encoding: "multipart/form-data",
-            target: "postframe"
-          });
-          $('#uploadform').submit();
-          // create the new div, when image processed, set it as background
-          $('#leftcolumn').append("<div class='stack'></div>");
-          $('#postframe').load(
-              function(){
-                var imgid = $("iframe")[0].contentDocument.body.innerHTML;
-                $('.stack:last').css('background-image', 'url("/image/' + imgid + '")');
-                scrollfunction();
-              });
-        });
+      
+      $('#savepage').attr({
+        action: "/case/",
+        method: "post",
+        caseid: caseid,
+        page: "1",
+        target: "postframe"
       });
+
+      $('#savepage').submit();
+    });
+
+    //$('form').submit(function() {
+    //  alert($(this).serialize());
+    //});
+
+    $("#upload").click(function(){
+      var userFile = $('#userfile').val();
+      var iframe = $( '<iframe name="postframe" id="postframe" class="hidden" src="about:none" />');
+      $('#iframe').append(iframe);
+
+      $('#uploadform').attr({
+        action: "/image/",
+        method: "post",
+        userfile: userFile,
+        enctype: "multipart/form-data",
+        encoding: "multipart/form-data",
+        target: "postframe"
+      });
+      $('#uploadform').submit();
+      // create the new div, when image processed, set it as background
+      $('#leftcolumn').append("<div class='stack'></div>");
+      $('#postframe').load(
+          function(){
+            var imgid = $("iframe")[0].contentDocument.body.innerHTML;
+            $('.stack:last').css('background-image', 'url("/image/' + imgid + '")');
+            scrollfunction();
+          });
+      });
+    });
