--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -16,6 +16,11 @@
   width: 480px;
   float: right;
 }
+#editbutton {
+  position: fixed;
+  bottom: 5px;
+  right: 5px;
+}
 #editbar {
   position: fixed;
   bottom: 0px;
