--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -12,6 +12,10 @@
 #righcolumn
     width 480px
     float right
+#editbutton
+    position fixed 
+    bottom 5px
+    right 5px
 #editbar
     position fixed
     bottom 0px
