--- a/views/case.jade
+++ b/views/case.jade
@@ -6,35 +6,56 @@
       .stack(url='#{radio}', style='background-image: url("/images/#{radio}.jpg")')
   #rightcolumn
     -each text in texts
-        .txt
-          textarea.mdtxt(style='display:none')
-              #{text}
-          .md
+      .txt
+        textarea.mdtxt(style='display:none')
+          #{text}
+      .md
 #editbar
 script(type='text/javascript')
   $(function(){
+
     $('#editbar').hide();
     var converter = new Showdown.converter();
-    var editurl = window.location.pathname + "edit";
-    alert(editurl);
+    //    alert(editurl);
     
     function rendermd(){ 
         $(".txt>.md").html(function(){
         var markdown = $(this).siblings(".mdtxt").val();
         // alert(markdown);
         var html = converter.makeHtml(markdown);
+        alert(html);
         return html;
         });
     }
+
     rendermd(); // renders the markdown textareas.
 
     $('#editbutton').click(function(){
       $('#editbar').show();
       $.ajax({
         url: window.location.pathname + "edit",
-        success: function(data){
-          alert(data);
-          document.getElementByID("editbar").appendChild(data);
+        method: "GET",
+        success: function(response){
+          if(!response){
+            $('#editbar').html('Denied');
+            }
+          else{ 
+            $('#editbar').html(response);
+            $(".md").live({
+            dblclick: function() {
+              $(this).hide();
+              $(this).siblings(".mdtxt").show().focus();
+            }
+            }); // shows the textbox for editing upon doubleclick
+          
+            $(".mdtxt").live({
+              blur: function() {
+                $(this).hide();
+                rendermd();
+                $(this).siblings(".md").show();
+              }
+            }); // hides the textbox and renders the markdown
+          }
         }
       });
     });
