--- a/views/edit.jade
+++ b/views/edit.jade
@@ -1,10 +1,10 @@
 #controls
-  form(id ='savepage', style='position:absolute; :top: 5px; right: 5px')
+  form(id ='savepage', style='position:fixed; :top: 5px; right: 5px')
     input(type='hidden', name='_method', value='put')
     input(id='save', type='submit', value='Save page', action='/case/#{caseid}/#{page}')
     button(id='done', type='button')
       | Done
-  form(id ='uploadform', style='position: absolute; top: 5px; left: 5px')
+  form(id ='uploadform', style='position: fixed; top: 5px; left: 5px')
     input(type='file', name='userfile', id='userfile', multiple='multiple')
     input(id='upload', type='submit', value='Upload file')
 #iframe(style='width: 0px; height: 0px; display:none')
