--- a/views/edit.jade
+++ b/views/edit.jade
@@ -2,6 +2,10 @@
   form(id ='savepage', style='position:fixed; top: 5px; right: 5px')
     input(type='hidden', name='_method', value='put')
     input(id='save', type='submit', value='Save page', action='/case/#{caseid}/#{page}')
+    button(id='1col', type='button')
+      | 1 col
+    button(id='2col', type='button')
+      | 2 col
     button(id='done', type='button')
       | Done
   form(id ='uploadform', style='position: fixed; top: 5px; left: 5px')
