grey design, thinking about md-syntax-div

--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -1,12 +1,14 @@
 #wrap
     min-height 100%
     padding 0
-    max-width 1024px
     min-width 512px
     margin 0 auto
 #taco
     margin-top 35px
     overflow hidden
+.col1
+    float left
+    clear left
 #editbutton
     position fixed 
     top 5px
@@ -19,12 +21,8 @@
     height 30px
     width 100%
     background-color #222
-.col1
-    float left 
 .col2
-    min-width 25em
-    max-width 35em
-    border-left 512px solid #333
+    border-left 512px solid #333 
     float left
     margin-left -512px
 .radio
@@ -57,16 +55,17 @@
 textarea
     line-height 1
     font-family monospace
-    font-size 110%
+    font-size 100%
 html
     height 100%
 body
     font-family Georgia, Palatino, serif
-    color #444444
+    color #ccc
+    background-color #333
     line-height 1
     height 100%
 h1, h2, h3, h4 
-    color #111111
+    color #eee
     font-weight 400
 h1, h2, h3, h4, h5, p 
     margin-bottom 24px
@@ -112,10 +111,10 @@ blockquote
     margin 1em 2em
     max-width 476px
 blockquote p 
-    color #666
+    color #aaa
     max-width 460px
 hr 
     width 540px
     text-align left
     margin 0 auto 0 0
-    color #999
+    color #aaa
