--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,13 +1,16 @@
 #wrap {
   min-height: 100%;
   padding: 0;
-  max-width: 1024px;
   min-width: 512px;
   margin: 0 auto;
 }
 #taco {
   margin-top: 35px;
   overflow: hidden;
+}
+.col1 {
+  float: left;
+  clear: left;
 }
 #editbutton {
   position: fixed;
@@ -23,12 +26,7 @@
   width: 100%;
   background-color: #222;
 }
-.col1 {
-  float: left;
-}
 .col2 {
-  min-width: 25em;
-  max-width: 35em;
   border-left: 512px solid #333;
   float: left;
   margin-left: -512px;
@@ -70,14 +68,15 @@
 textarea {
   line-height: 1;
   font-family: monospace;
-  font-size: 110%;
+  font-size: 100%;
 }
 html {
   height: 100%;
 }
 body {
   font-family: Georgia, Palatino, serif;
-  color: #444;
+  color: #ccc;
+  background-color: #333;
   line-height: 1;
   height: 100%;
 }
@@ -85,7 +84,7 @@ h1,
 h2,
 h3,
 h4 {
-  color: #111;
+  color: #eee;
   font-weight: 400;
 }
 h1,
@@ -154,12 +153,12 @@ blockquote {
   max-width: 476px;
 }
 blockquote p {
-  color: #666;
+  color: #aaa;
   max-width: 460px;
 }
 hr {
   width: 540px;
   text-align: left;
   margin: 0 auto 0 0;
-  color: #999;
+  color: #aaa;
 }
