--- a/views/edit.jade
+++ b/views/edit.jade
@@ -1,7 +1,7 @@
 #controls
-  form(id ='savepage', style='position:fixed; top: 5px; right: 5px')
+  form(id ='savepage', style='position:fixed; top: 5px; right: 5px', action='/case/#{caseid}/#{page}')
     input(type='hidden', name='_method', value='put')
-    input(id='save', type='submit', value='Save page', action='/case/#{caseid}/#{page}')
+    input(id='save', type='submit', value='Save page')
     button(id='1col', type='button')
       | 1 col
     button(id='2col', type='button')
