--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,6 +1,7 @@
 !!!
 html
   head
+    title #{title} 
     -each style in styles
       link(rel='stylesheet', href='/stylesheets/#{style}')
     script(src = 'http://code.jquery.com/jquery-latest.js')
